<resources>
    <string name="app_name">WelcomePage</string>
    <string name="app_slogan">FIND,DISCOVER,BUY AND ENJOY</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="checkedtextview">CheckedTextView</string>
    <string name="remeberme_chkbox">remember me</string>
    <string name="topic">Customer Login</string>
    <string name="button">LOGIN</string>
    <string name="main_login_btn">Are you already have an Account?Login</string>
    <string name="main_join_now_btn">Join Now</string>
    <string name="create_customer">Create Customer Account</string>
    <string name="phonenumber">Phone number</string>
    <string name="usernamecreate">username</string>
    <string name="passwordcreate">Password</string>
    <string name="cusregbutton">Register</string>
    <string name="email">Your Email</string>
    <string name="your_name">Your Name</string>
    <string name="name_display">Your Name : Tharuki</string>
    <string name="phonenumber_display">Phone number : 0716791929</string>
    <string name="edit_profile_button">Edit my profile</string>
    <string name="delete_profile_btn">Delete my profile</string>
    <string name="edit_profile_name">Name                  :</string>
    <string name="book_name">Charlottes web</string>
    <string name="book_description">Charlottes Web is a book of childrens literature by American author E. B. White.Written in Whites dry, low-key manner, Charlottes Web is considered a classic of childrens literature, enjoyable to adults as well as children</string>
    <string name="price">Price : Rs.1100</string>
    <string name="buy_now">BUY NOW</string>
    <string name="shopping_cart">SHOPPING CART</string>
    <string name="mickey">POOHS HONEY TROUBLE</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_book1">BUY</string>
    <string name="remove_book1">REMOVE</string>
    <string name="price1">Price : Rs.880</string>
    <string name="quantity1">Quantity</string>
    <string name="Little_Lost_Bear">Little Lost Bear</string>
    <string name="buy">BUY</string>
    <string name="remove">REMOVE</string>
    <string name="_1">+ 1 -</string>
    <string name="price2">Price : Rs.550</string>
    <string name="quantity">Quantity</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="name_prof">Name :</string>
    <string name="tharuki_prof">Tharuki</string>
    <string name="email_prof">Email :</string>
    <string name="tharuki_gmail_prof">tharuki@gmail.com</string>
    <string name="phone_number_prof">Phone Number :</string>
    <string name="_0716791926">0716791926</string>
    <string name="save_btn">SAVE</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="order_list">ORDER LIST</string>
    <string name="price_rs_880">Price : Rs.880</string>
    <string name="quantity_1">Quantity =1</string>
    <string name="price_rs_550">Price : Rs.550</string>
    <string name="quantity_2">Quantity = 1</string>
    <string name="total_price_rs_1430">Total Price = Rs.1430</string>
    <string name="pay">PAY</string>
    <string name="email_tprof">Your Email :tharuki@gmail.com</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="my_profile1">MY PROFILE</string>
    <string name="dashboard_mtprofile">DASHBOARD</string>
    <string name="dashboard_editprofile">DASHBOARD</string>
    <string name="dashboard_order_list">DASHBOARD</string>
    <string name="_orderlist">Cart</string>
    <string name="category_orderlist">CATEGORY</string>

</resources>