<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/w2"
    tools:context=".Edit_profile">

    <TextView
        android:id="@+id/edit_profile"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:layout_marginLeft="140dp"
        android:text="@string/edit_profile"
        android:textStyle="bold|italic"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        />
    <ImageView
        android:id="@+id/profilepic"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:src="@drawable/profilepic"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="140dp"
         />

    <TextView
        android:id="@+id/name_edit"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="30dp"
        android:text="@string/name_prof"
        android:textStyle="bold"
        android:textSize="22sp"
        />

    <EditText
        android:id="@+id/name_edit1"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="230dp"
        android:hint="@string/tharuki_prof"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/name_email"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="30dp"
        android:text="@string/email_prof"
        android:textStyle="bold"
        android:textSize="22sp"
        />

    <EditText
        android:id="@+id/name_email1"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="290dp"
        android:hint="@string/tharuki_gmail_prof"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/name_phone1"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="30dp"
        android:text="@string/phone_number_prof"
        android:textStyle="bold"
        android:textSize="22sp"
        />


    <EditText
        android:id="@+id/phone_edit1"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="350dp"
        android:hint="@string/_0716791926"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/save_btn"
        android:textSize="18sp"
        android:background="@color/teal_700"
      />

    <Button
        android:id="@+id/dashboard_editprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/dashboard_editprofile"
        android:textSize="18sp"
        android:layout_below="@+id/save"
        android:background="@color/black"
        android:textColor="@color/white"
        />
</RelativeLayout>