<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/w2"
    tools:context=".cart">

    <TextView
        android:id="@+id/shopping_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/shopping_cart"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="italic|bold"

        />

    <TextView
        android:id="@+id/mickey"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_below="@id/shopping_cart"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/mickey"
        android:textSize="16dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/book2"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:src="@drawable/book1"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="20px"

        />

    <Button
        android:id="@+id/buy"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_below="@+id/shopping_cart"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="70dp"
        android:background="@color/teal_700"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="@string/buy"
        />

    <Button
        android:id="@+id/Remove"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_below="@+id/shopping_cart"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="130dp"
        android:background="@color/teal_700"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="@string/remove"
        />

    <Button
        android:id="@+id/quantity"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_below="@+id/shopping_cart"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="190dp"
        android:background="@color/teal_700"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="+ 1 -"
        />

    <TextView
        android:id="@+id/cart_price1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="180dp"
        android:text="@string/price_rs_880"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/quantity_label1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="200dp"
        android:text="@string/quantity"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <ImageView
        android:id="@+id/book3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/book3"
        android:layout_marginTop="380dp"

        />


    <TextView
        android:id="@+id/little_lost_bear"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_below="@id/shopping_cart"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="280dp"
        android:text="@string/Little_Lost_Bear"
        android:textSize="16dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buy1"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_below="@+id/shopping_cart"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="320dp"
        android:background="@color/teal_700"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="@string/buy"
        />

    <Button
        android:id="@+id/Remove2"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_below="@+id/shopping_cart"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="380dp"
        android:background="@color/teal_700"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="@string/remove"
        />

    <Button
        android:id="@+id/quantity3"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_below="@+id/shopping_cart"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="440dp"
        android:background="@color/teal_700"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="@string/_1"
        />

    <TextView
        android:id="@+id/cart_price2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="180dp"
        android:text="@string/price_rs_550"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/quantity_label2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="520dp"
        android:layout_marginLeft="200dp"
        android:text="@string/quantity"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/dashboard_editprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/dashboard_editprofile"
        android:textSize="18sp"
        android:layout_below="@+id/quantity_label2"
        android:background="@color/black"
        android:textColor="@color/white"
        />




</RelativeLayout>