<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/w2"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="340dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo12"
    />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_below="@+id/logo"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="90dp"
        android:text="@string/app_slogan"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:text="@string/main_login_btn"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/main_join_now_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_login_btn"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/regcustomer"
        android:padding="20dp"
        android:text="@string/main_join_now_btn"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textAlignment="center"/>
</RelativeLayout>